# Chronoverse

./: .gitignore  Cargo.toml  LICENSE  README.md  test.ps1  test.sh
.github/: copilot-instructions.md
.github/instructions/: crv-cli.instructions.md  crv-edge.instructions.md  crv-hive.instructions.md  crv-ui.instructions.md  rust.instructions.md
.github/workflows/: ci.yml  rust.yml
crv-cli/: Cargo.toml  README.md  USAGE.md  build.rs  test.ps1
crv-cli/src/: lib.rs  main.rs
crv-cli/src/client/: crvclient.rs  mod.rs
crv-cli/src/commands/: auth.rs  changelist.rs  debug.rs  edge.rs  file.rs  mod.rs  workspace.rs
crv-core/: Cargo.toml
crv-core/examples/: logger_test.rs
crv-core/src/: lib.rs
crv-core/src/cas/: error.rs  mod.rs
crv-core/src/logger/: config.rs  example.rs  macros.rs  mod.rs  reader.rs  recovery.rs  rotation.rs  test.rs  writer.rs
crv-core/src/metadata/: RFC.md  changelist.rs  file.rs  file_revision.rs  mod.rs
crv-core/src/parsers/: mod.rs  path.rs  workspace.rs
crv-core/src/path/: basic.rs  engine.rs  mod.rs
crv-core/src/repository/: CONCURRENCY_NOTES.md  RFC_CRV.md  bundle.rs  chunk.rs  error.rs  index.rs  io_utils.rs  layout.rs  manager.rs  mod.rs  pack.rs
crv-core/src/storage/: block.rs  block_manager.rs  changelist.rs  file.rs  file_block.rs  file_manager.rs  mod.rs  unit_test.rs  workspace.rs
crv-core/src/tree/: depot_tree.rs  mod.rs
crv-core/src/user/: entity.rs
crv-core/src/workspace/: conflict_detector_v2.rs  entity.rs  mod.rs
crv-edge/: Cargo.toml  build.rs
crv-edge/src/: lib.rs  main.rs
crv-edge/src/client_manager/: block.rs  block_manager.rs  changelist.rs  file.rs  file_manager.rs  mod.rs  unit_test.rs  workspace.rs
crv-edge/src/daemon_server/: config.rs  context.rs  error.rs  hive_grpc.rs  mod.rs  server_entry.rs  server_entry_localtest.rs  service.rs  startup.rs  state.rs
crv-edge/src/daemon_server/db/: active_file.rs  changelist.rs  config.rs  file.rs  mod.rs  workspace.rs
crv-edge/src/daemon_server/handlers/: mod.rs  utils.rs
crv-edge/src/daemon_server/handlers/edge/: bonjour.rs  bonjour_hive.rs  get_auth_status.rs  get_runtime_config.rs  login.rs  logout.rs  mod.rs
crv-edge/src/daemon_server/handlers/file/: add.rs  checkout.rs  delete.rs  list_active_files.rs  mod.rs  submit.rs  sync.rs
crv-edge/src/daemon_server/handlers/job_system_debug/: cancel_job.rs  mod.rs  transfer_blueprint.rs  transfer_blueprint_async.rs
crv-edge/src/daemon_server/handlers/workspace/: create.rs  list.rs
crv-edge/src/daemon_server/job/: core.rs  manager.rs  mod.rs
crv-edge/src/daemon_server/middleware/: auth.rs  config.rs  mod.rs
crv-edge/src/hive_client/: mod.rs
crv-edge/src/proto_server/: server_entry.rs
crv-edge/src/utils/: hal.rs
crv-hive/: .env  Cargo.toml  Dockerfile  README.md  build-image.ps1  build-image.sh  build.rs  docker-compose.yml  hive.example.toml
crv-hive/docker/postgres/init/: 01-create-test-db.sh  01-create-test-db.sql
crv-hive/examples/: s3_usage.rs
crv-hive/mongo/: .gitignore  docker-compose.yml  native_start.ps1  native_stop.ps1  start.ps1  stop.ps1
crv-hive/postgres/: docker-compose.yml
crv-hive/scripts/: start-db.ps1  start-db.sh  test.ps1  test.sh
crv-hive/src/: lib.rs  logging.rs  main.rs  test_support.rs  tokens.rs
crv-hive/src/auth/: mod.rs
crv-hive/src/caching/: mod.rs
crv-hive/src/common/: depot_path.rs  mod.rs
crv-hive/src/config/: entity.rs  holder.rs  mod.rs
crv-hive/src/crv2/: mod.rs
crv-hive/src/crv2/config/: database.rs  iroh.rs  logging.rs  mod.rs  security.rs
crv-hive/src/crv2/iroh/: blob_events.rs  captive_portal.rs  iroh_client.rs  mod.rs  relay.rs  rpc_server.rs  service.rs
crv-hive/src/crv2/iroh/controller/: blob_controller.rs  depot_controller.rs  mod.rs  pre_submit_controller.rs  submit_controller.rs  user_controller.rs
crv-hive/src/crv2/postgres/: executor.rs  mod.rs
crv-hive/src/crv2/postgres/dao/: changelist.rs  file.rs  file_revision.rs  mod.rs  submit.rs  user.rs
crv-hive/src/crv2/postgres/entity/: changelist.rs  file.rs  file_revision.rs  mod.rs  submit.rs  submit_file.rs  user.rs
crv-hive/src/crv2/postgres/init/: mod.rs
crv-hive/src/crv2/service/: depot.rs  file.rs  mod.rs  submit.rs  submit_registry.rs  user.rs
crv-hive/src/database/: changelist.rs  dao.rs  ltree_key.rs  mod.rs  mongo.rs  service.rs  user.rs  workspace.rs
crv-hive/src/database/entities/: branches.rs  changelists.rs  file_revisions.rs  files.rs  mod.rs  users.rs
crv-hive/src/database/migration/: m20251224_000001_init.rs  m20251229_000002_add_seen_on_branches_to_files.rs  mod.rs
crv-hive/src/hive_server/: auth.rs  download.rs  fetch.rs  launch_submit.rs  mod.rs  submit.rs
crv-hive/src/hive_server/fetch/: download.rs  get_file_tree.rs  mod.rs
crv-hive/src/hive_server/submit/: launch_submit.rs  mod.rs  service.rs  submit.rs  upload_file_chunk.rs
crv-hive/src/logic/: auth.rs  changelist.rs  create_workspace.rs  list_workspaces.rs  mod.rs  tokens.rs  upload.rs
crv-hive/src/middleware/: mod.rs
crv-hive/src/repository/: bundle.rs  constants.rs  error.rs  index.rs  manager.rs  mod.rs
crv-hive/src/s3client/: README.md  adapter.rs  client.rs  error.rs  minio_adapter.rs  mod.rs
crv-hive/src/test/: grpc.rs  mod.rs  user.rs  workspace.rs
crv-hive/src/token/: entity.rs  mod.rs
crv-hive/src/user/: entitiy.rs  mod.rs
crv-hive/src/workspace/: mod.rs
crv-hive/tests/: mod.rs
crv-relay/: Cargo.toml
crv-relay/src/: captive_portal.rs  config.rs  lib.rs  main.rs  relay.rs
crv-server/: Cargo.toml
crv-ui/: package-lock.json  package.json
crv-ui/crv-ui/: index.html
crv-ui/src/: App.tsx
crv-ui/src/pages/: About.tsx  DepotTreeViewer.tsx  HiveManager.tsx  NotFound.tsx
crv-ui/src/routes/about/: +page.svelte
crv-ui/src/stories/: Badge.stories.svelte  Badge.svelte
data/shards/cas/: blobs.db
documentation/: crv-cli.md
proto/: daemon.proto  hive.proto  server.proto
src/: common.rs
