[workspace]
members = ["crv-core", "crv-cli", "crv-edge", "crv-hive"]
resolver = "3"

[workspace.package]
authors = ["youzheyin <1298763831@qq.com>"]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
bincode = { version = "2.0" }
thiserror = { version = "2" }
regex = { version = "1" }
confy = { version = "1" }
lru = { version = "0.16" }
