# crv-cli is the command line interface of crv for both hive and edge
[package]
name = "crv-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true

[[bin]]
name = "crv"
path = "src/main.rs"

[dependencies]
crv-core = { path = "../crv-core" }
crv-edge = { path = "../crv-edge" }

tokio = { workspace = true }
serde = { workspace = true }
confy = { workspace = true }

clap = { version = "4.5.47", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Protocol Buffer
prost = "0.14.1"
prost-types = "0.14.1"

tonic = "0.14.2"
tonic-prost = "0.14.2"

tokio-stream = "0.1"

anyhow = "1.0"

# Cli 三剑客
dialoguer = "0.12"
indicatif = "0.18"
console = "0.16"
# 表格打印
tabled = "0.20"

[build-dependencies]
tonic-prost-build = "0.14.2"
protoc-bin-vendored = "3"
