[package]
name = "crv-core"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
chumsky = "0.11"
dashmap = "6.1"
flate2 = "1.0"
lru = "0.16"
serde_json = "1.0"
tempfile = "3.8"
twox-hash = "1.6"
blake3 = "1.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
bson = { version = "2", features = ["chrono-0_4"] }
