# crv-edge is the client of crv
[package]
name = "crv-edge"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
crv-core = { path = "../crv-core" }

tokio = { workspace = true }
serde = { workspace = true }

# Fingerprint dependencies
blake3 = "1"
## no hostname/mac/sysinfo needed after stability change

# Protocol Buffer
prost = "0.14.1"
prost-types = "0.14.1"

tonic = "0.14.2"
tonic-prost = "0.14.2"

[target.'cfg(windows)'.dependencies]
tray-icon = "0.14"
tao = "0.32"
image = { version = "0.25", default-features = false, features = ["ico", "png"] }
winreg = "0.52"

[build-dependencies]
tonic-prost-build = "0.14.2"
protoc-bin-vendored = "3"