# crv-edge is the client of crv
[package]
name = "crv-edge"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
crv-core = { path = "../crv-core" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true}
thiserror = { workspace = true }
confy = { workspace = true }
bincode = { workspace = true }

tokio-stream = "0.1" # 配合 tonic 进行流处理必须的库

# Fingerprint dependencies
blake3 = "1"
## no hostname/mac/sysinfo needed after stability change

# Protocol Buffer
prost = "0.14.1"
prost-types = "0.14.1"

tonic = "0.14.2"
tonic-prost = "0.14.2"

# user directory helpers
directories = "6"

# Hash and compression dependencies
twox-hash = "1.6"
flate2 = "1.0"

# Embedded Database
rocksdb = "0.24.0"

uuid = { "version" = "1.19", features = ["v4"] }

[dev-dependencies]
tokio-stream = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[target.'cfg(windows)'.dependencies]
tray-icon = "0.14"
tao = "0.32"
image = { version = "0.25", default-features = false, features = ["ico", "png"] }
winreg = "0.52"

[build-dependencies]
tonic-prost-build = "0.14.2"
protoc-bin-vendored = "3"
