# crv-hive is the central server of crv
[package]
name = "crv-hive"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
crv-core = { path = "../crv-core" }

tokio = { workspace = true, version="1", features = ["full"] }
serde = { workspace = true }
toml = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
bson = { version = "2", features = ["chrono-0_4"] }
blake3 = "1.8.2"
crc32fast = "1.5.0"
lz4_flex = { version = "0.12.0", default-features = false, features = ["std"] }
tokio-stream = "0.1"

# Protocol Buffer
prost = "0.14.1"
prost-types = "0.14.1"

tonic = "0.14.2"
tonic-prost = "0.14.2"

mongodb = "3.3.0"
futures = { version = "0.3", default-features = false, features = ["std"] }

jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"

minio = "0.3.0"
async-trait = "0.1"
bytes = "1.9"
thiserror = "2.0.17"

[dev-dependencies]
tempfile = "3.23.0"

[build-dependencies]
tonic-prost-build = "0.14.2"
protoc-bin-vendored = "3"