# crv-hive is the central server of crv
[package]
name = "crv-hive"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
crv-core = { path = "../crv-core" }

tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
toml = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
blake3 = "1.8.2"
crc32fast = "1.5.0"
lz4_flex = { version = "0.12.0", default-features = false, features = ["std"] }
tokio-stream = "0.1"
serde_json = "1"

# Protocol Buffer
prost = "0.14.1"
prost-types = "0.14.1"

tonic = "0.14.2"
tonic-prost = "0.14.2"
tonic-web = "0.14.2"
http = "1.4.0"
tower-http = { version = "0.6.8", features = ["cors"] }
futures = { version = "0.3", default-features = false, features = ["std"] }

jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }

async-trait = "0.1"
bytes = "1.9"
thiserror = "2.0.17"
once_cell = "1.21.3"
anyhow = "1.0.100"
urlencoding = "2.1.3"
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-rustls"] }

[dev-dependencies]
tempfile = "3.23.0"

[build-dependencies]
tonic-prost-build = "0.14.2"
protoc-bin-vendored = "3"
