# crv-hive is the central server of crv
[package]
name = "crv-hive"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
crv-core = { path = "../crv-core" }

tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
toml = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
blake3 = "1.8.2"
crc32fast = "1.5.0"
lz4_flex = { version = "0.12.0", default-features = false, features = ["std"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }

async-trait = "0.1"
bytes = "1.9"
thiserror = "2.0.17"
once_cell = "1.21.3"
anyhow = "1.0.100"
urlencoding = "2.1.3"
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
iroh = "0.97.0"
iroh-relay = { version = "0.97.0", features = ["server"] }
rcgen = "0.14"
rustls = "0.23"
iroh-tickets = "0.4.0"

[dev-dependencies]
tempfile = "3.23.0"
