# crv-relay is the standalone relay + captive-portal server for Chronoverse
[package]
name = "crv-relay"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0.17"
once_cell = "1.21.3"

iroh-relay = { version = "0.97.0", features = ["server"] }
rcgen = "0.14"
rustls = "0.23"
